testsuite/tests/typecheck/should_fail/T9201.stderr

T9201.hs:9:17: error: [GHC-25897]
    • Expected kind ‘x’, but ‘a’ has kind ‘y’
      ‘y’ is a rigid type variable bound by
        the class declaration for ‘MonoidalCCC’
        at T9201.hs:7:21-62
      ‘x’ is a rigid type variable bound by
        the class declaration for ‘MonoidalCCC’
        at T9201.hs:7:21-62
    • In the first argument of ‘f’, namely ‘a’
      In the second argument of ‘d’, namely ‘(f a)’
      In the type signature: ret :: d a (f a)
